--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,8 @@
     <title>Bootbook</title>
 
     <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"   ></script>
+    <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"   ></script> -->
 
     <!-- Latest compiled JavaScript -->
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js   "></script>
@@ -28,7 +29,8 @@
 
     <%= javascript_include_tag 'application' %>
     <!-- < %= render '/layouts/bootbook.js' %> -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key="<%= ENV['GOOGLE_SECRET_KEY'] %>"&libraries=places"></script>
+
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_SECRET_KEY'] %>&libraries=places"></script>
   </head>
 
   <body>
@@ -91,6 +93,6 @@
       </footer>
     </div>
   </body>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
+  <!-- <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script> -->
 </html>
