add comment to repush to github

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -180,7 +180,7 @@
     </div>
   <% end %>
 </div>
-
+  <!-- Favorites -->
   <% if current_user.id == @user.id && current_user.followees.present? %>
 
   <h1 class="page-header"><i class="glyphicon glyphicon-heart" aria-hidden="true"></i> My Favorite Boots  <i class="glyphicon glyphicon-heart" aria-hidden="true"></i> </h1>
