--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -183,10 +183,10 @@
           </div>
           <div class="col-sm-8">
             <%= fields_for :salary do |s| %>
-            <%= s.select(:job_since_DBC, [['1', '1'], ['2', '2'], ['3', '3'], ['4', '4'], ['5', '5'], ['6', '6'], ['7', '7'], ['8', '8'], ['9', '9'], ['10', '10']]) %>
-            <%= s.select(:year, [['2012', '2012'], ['2013', '2013'], ['2014', '2014'], ['2015', '2015'], ['2016', '2016']]) %>
-            <%= s.select(:quarter, [['First', 'First'], ['Second', 'Second'], ['Third', 'Third'], ['Quarter', 'Quarter']]) %>
-            <%= s.select(:salary, [['$30,000-$39,999', '$30,000-$39,999'], ['$40,000-$49,999', '$40,000-$49,999'], ['$50,000-$59,999', '$50,000-$59,999'], ['$60,000-$69,999', '$60,000-$69,999'], ['$70,000-$79,999', '$70,000-$79,999'], ['$80,000-$89,999', '$80,000-$89,999'], ['$90,000-$99,999', '$90,000-$99,999'], ['$100,000-$109,999', '$100,000-$109,999'], ['$110,000-$119,999', '$110,000-$119,999'], ['$120,000 or More', '$120,000 or More']])%>
+            <%= s.select(:job_since_dbc, [['', ''], ['1', '1'], ['2', '2'], ['3', '3'], ['4', '4'], ['5', '5'], ['6', '6'], ['7', '7'], ['8', '8'], ['9', '9'], ['10', '10']]) %>
+            <%= s.select(:year, [['', ''], ['2012', '2012'], ['2013', '2013'], ['2014', '2014'], ['2015', '2015'], ['2016', '2016']]) %>
+            <%= s.select(:quarter, [['', ''], ['First', 'First'], ['Second', 'Second'], ['Third', 'Third'], ['Quarter', 'Quarter']]) %>
+            <%= s.select(:salary, [['', ''], ['$30,000-$39,999', '$30,000-$39,999'], ['$40,000-$49,999', '$40,000-$49,999'], ['$50,000-$59,999', '$50,000-$59,999'], ['$60,000-$69,999', '$60,000-$69,999'], ['$70,000-$79,999', '$70,000-$79,999'], ['$80,000-$89,999', '$80,000-$89,999'], ['$90,000-$99,999', '$90,000-$99,999'], ['$100,000-$109,999', '$100,000-$109,999'], ['$110,000-$119,999', '$110,000-$119,999'], ['$120,000 or More', '$120,000 or More']])%>
             <% end %>
           </div>
         </div>
