Edit favorite_boots checkbox on users/index to default unchecked

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -21,7 +21,7 @@
     <form class="navbar-form navbar-right" action="/users" method="get">
       <label>Only Favorite Boots</label>
       <input name="favorite_boots" type="hidden" value="0" />
-      <input checked="checked" type="checkbox" id="favorite_boots" name="favorite_boots" value="1" />
+      <input type="checkbox" id="favorite_boots" name="favorite_boots" value="1" />
 
       <input list="find-city" name="city" class="form-control" placeholder="City" />
       <datalist id="find-city">
