Add profile image of @other as link to profile on messages/index

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -172,3 +172,11 @@ body {
 .fa-paper-plane {
   color: purple;
 }
+
+/*
+* Conversation (Christel made this part.)
+*/
+
+div .conversation {
+  display: inline-block;
+}
