--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -72,7 +72,7 @@
 </div>
 
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-  <h1 class="page-header">Boots<span>&nbsp;&nbsp;<a href="#" id="toggle-view" class="smaller-header-text">Show as Map</a></span></h1>
+  <h1 class="page-header">Boots<span>&nbsp;&nbsp;<a href="" id="toggle-view" class="smaller-header-text">Show as Map</a></span></h1>
 
   <div id="grid-view" class="row placeholders">
     <%= render 'gridview' %>
