--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,14 +3,11 @@
   <head>
     <title>Bootbook</title>
 
+    <%= csrf_meta_tags %>
+
     <!-- jQuery library -->
     <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"   ></script> -->
-
-    <!-- Latest compiled JavaScript -->
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js   "></script>
-
-    <%= csrf_meta_tags %>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -94,9 +91,7 @@
     </div>
   </body>
 
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
-  <!-- <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script> -->
 
-  <!-- must be at bottom to be sure document ready loads during normal nav & not only on page refresh -->
+  <!-- putting at bottom to be sure document ready loads during normal nav & not only on page refresh -->
   <%= javascript_include_tag 'application' %>
 </html>
