Add handling throughout views and form for when user is missing crucial fields

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -10,8 +10,8 @@
         <% end %>
         <h4><%= current_user.name %></h4>
         <span class="text-muted">
-          <%= current_user.cohorts.last.name%><br>
-          <%= current_user.cohorts.last.campus %>
+          <%= current_user.graduating_cohort %><br>
+          <%= current_user.cohorts.last.campus if !current_user.cohorts.empty? %>
         </span>
       </div>
     </div>
@@ -24,8 +24,8 @@
         <% end %>
         <h4><%= @other.name %></h4>
         <span class="text-muted">
-          <%= @other.cohorts.last.name%><br>
-          <%= @other.cohorts.last.campus %>
+          <%= @other.graduating_cohort%><br>
+          <%= @other.cohorts.last.campus if @other.cohorts %>
         </span>
       </div>
     </div>
