Add blank option in state dropdown in users/edit

--- a/app/views/users/_gridview.html.erb
+++ b/app/views/users/_gridview.html.erb
@@ -4,8 +4,8 @@
     <img src="<%= user.profile_image %>" width="200" height="200" class="img-responsive" alt="profile image">
     <h4><%= user.name %></h4>
   </a>
-      <span class="text-muted"><%= user.cohorts.last.name %></span><br>
-      <% if user.country == 'US' %>
+      <span class="text-muted"><%= user.graduating_cohort %></span><br>
+      <% if user.country == 'United States' %>
         <span class="text-muted"><%= user.city %>, <%= user.state %></span><br>
       <% else %>
         <span class="text-muted"><%= user.city %>, <%= user.country %>
