--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/users"><img src="bootbook-green.png"></a>
+          <a class="boot-logo" href="/users"><img id="boot-logo" src="bootbook-bright.png"></a><!--  navbar-brand -->
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <% if current_user %>
