add icon and styling to welcome and add backup images

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="boot-logo" href="/users"><img id="boot-logo" src="bootbook-bright.png"></a><!--  navbar-brand -->
+          <a class="boot-logo" href="/users"><%= image_tag "bootbook-bright.png", id: "boot-logo" %></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <% if current_user %>
