--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -62,7 +62,7 @@ body {
 }
 
 #bootbook-nav {
-  background-color: #004d4d;
+  background-color: #263826;
 }
 
 #logo {
@@ -74,6 +74,15 @@ body {
   padding-top: 0px;
   /*padding-bottom: 10px;*/
 }
+
+#boot-main-logo {
+  padding: 20px;
+  width: 100%;
+  height: 100%;
+  margin: 0px auto;
+  padding-bottom: 100px;
+}
+
 /*
  * Sidebar
  */
