--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,7 @@
 <div class="jumbotron github-login">
+  <div>
+    <%= image_tag "bootbook-main-large.png", id: "boot-main-logo"%>
+  </div>
   <a href='/signin' class="btn btn-block btn-social btn-github">
     <span class="fa fa-github"></span> Sign in with Github
   </a>
